--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,17 @@ language: python
 python:
   - "3.6"
 
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
+  - pip install -U black
+
 install:
-  - pip install .
-  - pip install black
-  - pip install pytest
+  - pip install ".[test]" .
 
 script:
-  - python -m pytest
+  - pytest
   - black --check pytmg/
 
 jobs:
