--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - pip install -U pip
   - pip install -U pytest
   - pip install -U black
+  - pip install -U responses
 
 install:
   - pip install ".[test]" .
